[package]
name = "backup"
version = "0.0.1"
license = "Apache-2.0"
edition = "2018"
publish = false

[[bin]]
name = "backup-ctl"

[dependencies]
log = { version = "0.3", features = ["max_level_trace", "release_max_level_debug"] }
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-async = { version = "2.3", default-features = false }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "91904ade" }
rand = "0.6.5"
quick-error = "1.2.2"
tempdir = "0.3"
protobuf = "~2.0"
raft = "0.4.3"
# TODO: use master branch after the next version is released.
kvproto = { git = "https://github.com/pingcap/kvproto.git", branch = "backup" }
petgraph = "0.4"
clap = "2.32"

[dependencies.prometheus]
version = "0.4.2"
default-features = false
features = ["nightly", "push", "process"]

[dev-dependencies]
fs_extra = "1.1"
