[package]
name = "cdc"
version = "4.0.0-alpha"
license = "Apache-2.0"
homepage = "https://tikv.org"
repository = "https://github.com/tikv/tikv/"
readme = "README.md"
edition = "2018"
publish = false

[dependencies]
tikv = { path = "../../", default-features = false }
log = { version = "0.3", features = ["max_level_trace", "release_max_level_debug"] }
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "91904ade" }
byteorder = "1.2"
rand = "0.6.5"
quick-error = "1.2.2"
tempfile = "3.0"
time = "0.1"
toml = "0.4"
libc = "0.2"
crc = "1.8"
fs2 = "0.4"
spin = "0.5"
protobuf = "2.8"
nix = "0.11"
utime = "0.2"
chrono = "0.4"
lazy_static = "1.3"
backtrace = "0.2.3"
url = "1.7.2"
sys-info = "0.5.7"
futures = "0.1"
futures-cpupool = "0.1"
futures-locks = "0.1"
tokio-core = "0.1"
tokio-timer = "0.2"
tokio-executor = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
zipf = "5.0.1"
bitflags = "1.0.1"
fail = "0.3"
uuid = { version = "0.6", features = [ "serde", "v4" ] }
grpcio = { version = "0.5.0-alpha.3", features = [ "openssl-vendored" ] }
raft = "0.6.0-alpha"
crossbeam = "0.5"
hex = "0.3"
tokio-threadpool = "0.1.13"
mime = "0.3.13"
kvproto = { git = "https://github.com/pingcap/kvproto.git" }
tikv_util = { path = "../tikv_util" }

[dependencies.prometheus]
version = "0.4.2"
default-features = false
features = ["nightly", "push", "process"]

[dev-dependencies]
test_util = { path = "../test_util" }
test_raftstore = { path = "../test_raftstore" }
engine = { path = "../engine" }
