[package]
name = "resolved_ts"
version = "0.0.1"
edition = "2018"
publish = false

[dependencies]
tikv = { path = "../../", default-features = false }
kvproto = { git = "https://github.com/pingcap/kvproto.git" }
tikv_util = { path = "../tikv_util" }
tikv_alloc = { path = "../tikv_alloc", default-features = false }
hex = "0.3"
